--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "tabs-toggle",
   "displayName": "tabs-toggle",
   "description": "Toggle editor tabs-bar visibility.",
+  "publisher": "StefanArmijo",
   "repository": {
     "type": "git",
     "url": "https://github.com/Stefanough/vs-code-tabs-toggle"
   },
-  "version": "0.0.1",
+  "version": "0.0.2",
   "engines": {
     "vscode": "^1.84.0"
   },
