--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "https://github.com/Stefanough/vs-code-tabs-toggle"
   },
-  "version": "0.2.1",
+  "version": "0.2.2",
   "engines": {
     "vscode": "^1.84.0"
   },
@@ -25,6 +25,10 @@
       {
         "command": "tabs-toggle.cycleBar",
         "title": "cycle-bar"
+      },
+      {
+        "command": "tabs-toggle.restoreUIElements",
+        "title": "restore-ui-elements"
       }
     ]
   },
